[package]
name = "pending_name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
macroquad-canvas = "0.3"
macroquad-platformer = "0.1"
thiserror = "1.0"
derefable = "0.1"
slotmap = "1.0"
enumflags2 = "0.7"
enum-map = "2.0"
include_dir = "0.7"
derivative = "2.2"
arraygen = "0.3"
nanoserde = "0.1" # Might not need that one
maplit = "1.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimizations
codegen-units = 16 # Less codegen units == better optimizations == slower compilation
panic = "abort"   # Don't clean up after crashing (reduces bin size)

[features]
target_fps = []
